fix: standardize spacing system (#6207)
* fix: standardize spacing system

* fix: improved tokens

---------

--- a/src/screens/AdminPortal/ManageTag/ManageTag.module.css
+++ b/src/screens/AdminPortal/ManageTag/ManageTag.module.css
@@ -1,5 +1,5 @@
-.errorContainer {
-  min-height: 100vh;
+.errorIcon {
+  font-size: var(--font-size-3xl);
 }
 
 .errorMessage {
